--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -1,27 +1,184 @@
-html,
-body
-  margin 0
-  padding 0
+html, body
+  margin: 0
+  padding: 0
 
 html
-  min-height 100%
-  min-height 100vh
+  min-height: 100%
+  min-height: 100vh
+
+body
+  background-color: #E5E5E5
+
+h1, h2, h3, h4, h5, h6
+  margin-top: 0
+  margin-bottom: 20px
+
+h1
+  font-size: 60px
+  color: #A49777
+  font-weight: 700
+  line-height: 1.3
+
+h2
+  font-size: 60px
+  color: #A49777
+  font-weight: 700
+  line-height: 1.3
+
+h3
+  font-size: 44px
+  color: #CDCDCD
+  font-weight: 700
+  line-height: 1.3
+  margin-bottom: 15px
+
+h5
+  font-size: 18px
+  color: #434343
+  font-weight: 700
+  line-height: 1.2
+  margin-bottom 15px
+
+p
+  font-size: 18px
+  font-weight: 400
+  line-height: 1.2
+  margin-top: 0
+  margin-bottom: 15px
 
 .app
-  display flex
-  flex-direction column
-  height 100%
-  height 100vh
+  display: flex
+  flex-direction: column
+  height: 100%
+  height: 100vh
 
   &__wrapper
-    display flex
-    flex-direction column
-    min-height 100%
-    min-height 100vh
+    display: flex
+    flex-direction: column
+    min-height: 100%
+    min-height: 100vh
 
   &__content
-    display flex
-    flex 1 0 auto
+    display: flex
+    flex: 1 0 auto
 
   &__main
-    flex 1
+    flex: 1
+
+.contain
+  max-width: 1170px + 15px + 15px
+  width: 100%
+  padding-right: 15px
+  padding-left: 15px
+  margin: 0 auto
+
+.button-default
+  font-size: 18px
+  color: #fff
+  font-weight: 700
+  line-height: 1.1
+  text-align: center
+  text-decoration: none
+  min-width: 220px
+  display: inline-block
+  vertical-align: top
+  padding: 13px 22px 14px 22px
+  border: 1px solid transparent
+  background-color: #DE8C10
+  transition: color 0.3s, background-color 0.3s, border-color 0.3s, ease 0.3s
+  cursor: pointer
+
+  &._is-loading
+    padding-top: 17px
+    padding-bottom: 18px
+
+    &:before
+      content: ''
+      width: 12px
+      height: 12px
+      margin-left: auto
+      margin-right: auto
+      display: block
+      background-image: url('../img/loader-icon.png')
+      background-repeat: no-repeat
+      background-size: contain
+      background-position: 0 0
+      animation: loading 1.5s linear infinite
+
+  &:hover
+    color: #fff
+    background-color: #ff9b04
+
+  &:active
+    background-color: #DE8C10
+
+  @keyframes loading
+    from
+      transform: rotate(0deg)
+
+    to
+      transform: rotate(360deg)
+
+  &--uncolored
+    color: #A0A0A0
+    background-color: #F5F5F5
+
+  &--large
+    font-size: 20px
+    padding-top: 15px
+    padding-bottom: 19px
+    background-color: #A49777
+    border-radius: 8px
+
+    &._is-loading
+      padding-top: 22px
+      padding-bottom: 22px
+
+    &:hover
+      background-color: #DE8C10
+
+  &--other
+    background-color: #A49777
+
+    &:hover
+      background-color: #DE8C10
+
+  &--outline
+    color: #b6b6b6
+    font-weight: 400
+    border: 1px solid #CBCBCB
+    background-color: transparent
+
+    &:hover
+      border-color: #A49777
+      background-color: #A49777
+
+.button-go-to
+  font-size: 22px
+  color: #A49777
+  font-weight: 700
+  line-height: 1.1
+  text-decoration: none
+  transition: color 0.3s, ease 0.3s
+  display: flex
+  align-items: center
+
+  &:hover
+    color: #DE8C10
+
+    .svg-icon
+      fill: #DE8C10
+
+  &:active
+    color: #CE7B01
+
+    .svg-icon
+      fill: #CE7B01
+
+  &--uncolored
+    color: #C4C4C4
+
+  .svg-icon
+    fill: #A49777
+    padding-top: 3px
+    margin-left: 15px
