--- a/marmelad/styles/components/_variables.styl
+++ b/marmelad/styles/components/_variables.styl
@@ -1,8 +1,8 @@
-$system-font = unquote('-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"')
+$system-font = unquote(' "Playfair Display", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"')
 
 $colors = {
-  theme: #6fbc95,
-  accent: #BC6F96,
+  theme: #CDCDCD,
+  accent: #A49777,
 }
 
 $fonts = {
@@ -26,7 +26,7 @@ $selection = {
 
 $selectionHeadings = {
   bgc: $colors.accent,
-  color: #000
+  color: #434343
 }
 
 $placeholders = {
