--- a/static/css/app.css
+++ b/static/css/app.css
@@ -262,6 +262,186 @@ img {
   -webkit-box-flex: 0;
       -ms-flex: none;
           flex: none;
+  background-color: #fff;
+}
+.top-line {
+  padding-top: 25px;
+}
+.top-line__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.top-line__phone {
+  font-size: 18px;
+  color: #000;
+  font-weight: 500;
+  line-height: 1.1;
+  text-decoration: none;
+  margin-left: 50px;
+  -webkit-transition: color 0.3s, ease 0.3s;
+  transition: color 0.3s, ease 0.3s;
+  margin-left: auto;
+}
+.top-line__schedule {
+  font-size: 18px;
+  color: #969696;
+  font-weight: 400;
+  line-height: 1.1;
+}
+.top-line__menu {
+  padding-top: 30px;
+  padding-bottom: 40px;
+}
+.header-contacts {
+  margin-left: auto;
+}
+.header-contacts__section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header-contacts__socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header-contacts__social-link {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 22px;
+          flex: 0 0 22px;
+  width: 22px;
+  max-width: 22px;
+  height: 22px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0 0;
+  margin-right: 10px;
+  -webkit-transition: background 0.3s, ease 0.3s;
+  transition: background 0.3s, ease 0.3s;
+}
+.header-contacts__social-link--whatsapp {
+  background-image: url("data:image/svg+xml,%3Csvg width='21' height='21' viewBox='0 0 21 21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.5026 0H10.4974C4.70794 0 0 4.70925 0 10.5C0 12.7969 0.74025 14.9257 1.99894 16.6543L0.690375 20.5551L4.72631 19.2649C6.38663 20.3647 8.36719 21 10.5026 21C16.2921 21 21 16.2894 21 10.5C21 4.71056 16.2921 0 10.5026 0ZM16.6123 14.8273C16.359 15.5426 15.3536 16.1359 14.5517 16.3091C14.0031 16.4259 13.2864 16.5191 10.8741 15.519C7.78837 14.2406 5.80125 11.1051 5.64638 10.9016C5.49806 10.6982 4.3995 9.24131 4.3995 7.73456C4.3995 6.22781 5.16469 5.49412 5.47312 5.17913C5.72644 4.92056 6.14512 4.80244 6.54675 4.80244C6.67669 4.80244 6.7935 4.809 6.8985 4.81425C7.20694 4.82737 7.36181 4.84575 7.56525 5.33269C7.81856 5.943 8.43544 7.44975 8.50894 7.60463C8.58375 7.7595 8.65856 7.9695 8.55356 8.17294C8.45512 8.38294 8.3685 8.47612 8.21362 8.65462C8.05875 8.83313 7.91175 8.96963 7.75688 9.16125C7.61512 9.32794 7.455 9.50644 7.6335 9.81488C7.812 10.1167 8.42887 11.1234 9.33712 11.9319C10.5092 12.9754 11.4594 13.3088 11.7994 13.4505C12.0527 13.5555 12.3546 13.5306 12.5396 13.3337C12.7746 13.0804 13.0646 12.6604 13.3599 12.2469C13.5699 11.9503 13.8351 11.9136 14.1133 12.0186C14.3968 12.117 15.897 12.8586 16.2054 13.0121C16.5139 13.167 16.7173 13.2405 16.7921 13.3704C16.8656 13.5004 16.8656 14.1107 16.6123 14.8273Z' fill='%23A49777'/%3E%3C/svg%3E%0A");
+}
+.header-contacts__social-link--whatsapp:hover {
+  background-image: url("data:image/svg+xml,%3Csvg width='21' height='21' viewBox='0 0 21 21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10.5026 0H10.4974C4.70794 0 0 4.70925 0 10.5C0 12.7969 0.74025 14.9258 1.99894 16.6543L0.690375 20.5551L4.72631 19.2649C6.38663 20.3648 8.36719 21 10.5026 21C16.2921 21 21 16.2894 21 10.5C21 4.71056 16.2921 0 10.5026 0ZM16.6123 14.8273C16.359 15.5426 15.3536 16.1359 14.5517 16.3091C14.0031 16.4259 13.2864 16.5191 10.8741 15.519C7.78837 14.2406 5.80125 11.1051 5.64638 10.9016C5.49806 10.6982 4.3995 9.24131 4.3995 7.73456C4.3995 6.22781 5.16469 5.49413 5.47313 5.17913C5.72644 4.92056 6.14512 4.80244 6.54675 4.80244C6.67669 4.80244 6.7935 4.809 6.8985 4.81425C7.20694 4.82737 7.36181 4.84575 7.56525 5.33269C7.81856 5.943 8.43544 7.44975 8.50894 7.60463C8.58375 7.7595 8.65856 7.9695 8.55356 8.17294C8.45513 8.38294 8.3685 8.47612 8.21362 8.65462C8.05875 8.83312 7.91175 8.96963 7.75687 9.16125C7.61512 9.32794 7.455 9.50644 7.6335 9.81488C7.812 10.1168 8.42887 11.1234 9.33712 11.9319C10.5092 12.9754 11.4594 13.3088 11.7994 13.4505C12.0527 13.5555 12.3546 13.5306 12.5396 13.3337C12.7746 13.0804 13.0646 12.6604 13.3599 12.2469C13.5699 11.9503 13.8351 11.9136 14.1133 12.0186C14.3968 12.117 15.897 12.8586 16.2054 13.0121C16.5139 13.167 16.7173 13.2405 16.7921 13.3704C16.8656 13.5004 16.8656 14.1107 16.6123 14.8273Z' fill='%23000'/%3E%3C/svg%3E%0A");
+}
+.header-contacts__social-link--telegram {
+  background-image: url("data:image/svg+xml,%3Csvg width='22' height='22' viewBox='0 0 22 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 22C17.0751 22 22 17.0751 22 11C22 4.92487 17.0751 0 11 0C4.92487 0 0 4.92487 0 11C0 17.0751 4.92487 22 11 22Z' fill='%23A49777'/%3E%3Cpath d='M5.03341 10.7619L15.6392 6.67261C16.1315 6.49477 16.5614 6.79269 16.4019 7.53702L16.4028 7.53611L14.597 16.0437C14.4632 16.6469 14.1047 16.7935 13.6033 16.5094L10.8533 14.4826L9.52691 15.7604C9.38025 15.9071 9.2565 16.0309 8.97233 16.0309L9.16758 13.2323L14.2642 8.62786C14.4861 8.43261 14.2147 8.32261 13.9223 8.51694L7.62391 12.4824L4.90875 11.6354C4.31933 11.4484 4.3065 11.046 5.03341 10.7619Z' fill='white'/%3E%3C/svg%3E%0A");
+}
+.header-contacts__social-link--telegram:hover {
+  background-image: url("data:image/svg+xml,%3Csvg width='22' height='22' viewBox='0 0 22 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 22C17.0751 22 22 17.0751 22 11C22 4.92487 17.0751 0 11 0C4.92487 0 0 4.92487 0 11C0 17.0751 4.92487 22 11 22Z' fill='%23000'/%3E%3Cpath d='M5.03341 10.7619L15.6392 6.67261C16.1315 6.49477 16.5614 6.79269 16.4019 7.53702L16.4028 7.53611L14.597 16.0437C14.4632 16.6469 14.1047 16.7935 13.6033 16.5094L10.8533 14.4826L9.52691 15.7604C9.38025 15.9071 9.2565 16.0309 8.97233 16.0309L9.16758 13.2323L14.2642 8.62786C14.4861 8.43261 14.2147 8.32261 13.9223 8.51694L7.62391 12.4824L4.90875 11.6354C4.31933 11.4484 4.3065 11.046 5.03341 10.7619Z' fill='white'/%3E%3C/svg%3E%0A");
+}
+.header-contacts__phone {
+  font-size: 18px;
+  color: #000;
+  font-weight: 400;
+  line-height: 1.1;
+  text-decoration: none;
+  margin-left: 50px;
+  -webkit-transition: color 0.3s, ease 0.3s;
+  transition: color 0.3s, ease 0.3s;
+}
+.header-contacts__phone:hover {
+  color: #de8c10;
+}
+.header-contacts__call {
+  font-size: 18px;
+  color: #000;
+  font-weight: 400;
+  line-height: 1;
+  text-decoration: none;
+  margin-left: 20px;
+  padding-left: 20px;
+  position: relative;
+  -webkit-transition: color 0.3s, ease 0.3s;
+  transition: color 0.3s, ease 0.3s;
+}
+.header-contacts__call:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background-color: #a49777;
+}
+.header-contacts__call:hover {
+  color: #de8c10;
+}
+.button-burger {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  width: 45px;
+  height: 30px;
+  padding: 0;
+  background-color: transparent;
+  margin-left: 50px;
+  border: none;
+  cursor: pointer;
+}
+.button-burger._is-active:before {
+  -webkit-transform: rotate(-45deg) translate(4px, -5px);
+          transform: rotate(-45deg) translate(4px, -5px);
+}
+.button-burger._is-active:after {
+  width: 43px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.button-burger._is-active span {
+  width: 100%;
+  opacity: 0;
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+}
+.button-burger:before,
+.button-burger:after {
+  content: '';
+  height: 6px;
+  background-color: #a49777;
+  border-radius: 3px;
+  -webkit-transition: width 0.3s, ease 0.3s;
+  transition: width 0.3s, ease 0.3s;
+}
+.button-burger:before {
+  width: 43px;
+  margin-bottom: 5px;
+  -webkit-transform-origin: top right;
+          transform-origin: top right;
+}
+.button-burger:after {
+  width: 29px;
+  -webkit-transform-origin: bottom right;
+          transform-origin: bottom right;
+}
+.button-burger span {
+  width: 36px;
+  height: 6px;
+  background-color: #a49777;
+  border-radius: 3px;
+  margin-bottom: 5px;
+  -webkit-transition: ease 0.3s, -webkit-transform 0.3s;
+  transition: ease 0.3s, -webkit-transform 0.3s;
+  transition: transform 0.3s, ease 0.3s;
+  transition: transform 0.3s, ease 0.3s, -webkit-transform 0.3s;
 }
 html,
 body {
@@ -493,6 +673,71 @@ p {
   padding-top: 3px;
   margin-left: 15px;
 }
+.logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 40px;
+}
+.logo__link {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 115px;
+          flex: 0 0 115px;
+  width: 115px;
+  max-width: 115px;
+  margin-right: 55px;
+}
+.logo__link img {
+  vertical-align: top;
+}
+.logo__desc {
+  font-size: 19px;
+  color: #343434;
+  font-weight: 400;
+  line-height: 1.2;
+  max-width: 190px;
+}
+.main-menu {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+.main-menu__nav ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-left: 0;
+  margin: 0;
+}
+.main-menu__nav ul li {
+  margin-right: 75px;
+}
+.main-menu__nav ul li:last-child {
+  margin-right: 0;
+}
+.main-menu__nav ul li a {
+  font-size: 18px;
+  color: #4f4f4f;
+  font-weight: 400;
+  line-height: 1.1;
+  text-decoration: none;
+  -webkit-transition: color 0.3s, ease 0.3s;
+  transition: color 0.3s, ease 0.3s;
+}
+.main-menu__nav ul li a:hover {
+  color: #de8c10;
+}
 @-webkit-keyframes spinner {
   from {
     -webkit-transform: rotate(0deg);
@@ -511,5 +756,101 @@ p {
   to {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
+  }
+}
+@media (min-width: 768px) {
+  .top-line__phone {
+    display: none;
+  }
+}
+@media (min-width: 960px) {
+  .button-burger {
+    display: none;
+  }
+}
+@media (max-width: 1279px) {
+  .header-contacts__phone {
+    margin-left: 25px;
+  }
+  .logo {
+    margin-right: 20px;
+  }
+  .logo__link {
+    margin-right: 25px;
+  }
+}
+@media (max-width: 1023px) {
+  .logo__desc {
+    display: none;
+  }
+}
+@media (max-width: 959px) {
+  .top-line__menu {
+    padding-top: 0;
+    padding-bottom: 0;
+    border-top: 1px solid #eee;
+    margin-top: 20px;
+  }
+  .header-contacts__call {
+    display: none;
+  }
+  .main-menu {
+    padding-top: 40px;
+    border: none;
+    -webkit-box-shadow: 0px 12px 9px rgba(0,0,0,0.08);
+            box-shadow: 0px 12px 9px rgba(0,0,0,0.08);
+    border-radius: 0px 0px 15px 15px;
+    padding-bottom: 25px;
+    display: none;
+  }
+  .main-menu__nav ul {
+    display: block;
+    padding-left: 55px;
+  }
+  .main-menu__nav ul li {
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 767px) {
+  .top-line {
+    padding-top: 20px;
+  }
+  .top-line__inner {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .top-line__schedule {
+    display: none;
+  }
+  .header-contacts {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 20px;
+  }
+  .header-contacts__section {
+    width: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .header-contacts__social-link {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 25px;
+            flex: 0 0 25px;
+    width: 25px;
+    max-width: 25px;
+    height: 25px;
+    margin-right: 15px;
+  }
+  .header-contacts__phone {
+    display: none;
+  }
+  .logo__link {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 70px;
+            flex: 0 0 70px;
+    width: 70px;
+    max-width: 70px;
   }
 }
