added hero block

--- a/marmelad/_blocks/_header/header.styl
+++ b/marmelad/_blocks/_header/header.styl
@@ -46,6 +46,7 @@
       padding-bottom: 0
       border-top: 1px solid #EEEEEE
       margin-top: 20px
+      position: relative
 
 .header-contacts
   margin-left: auto
