--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -37,7 +37,7 @@ h5
   color: #434343
   font-weight: 700
   line-height: 1.2
-  margin-bottom 15px
+  margin-bottom: 15px
 
 p
   font-size: 18px
@@ -182,3 +182,27 @@ p
     fill: #A49777
     padding-top: 3px
     margin-left: 15px
+
+.swiper-button-prev, .swiper-button-next
+  width: 45px
+  height: 45px
+  border-radius: 50%
+  background-color: #ddd
+  background-image: url("data:image/svg+xml,%3Csvg width='8' height='13' viewBox='0 0 8 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 12L2 6.5L7 0.999999' stroke='white' stroke-width='2'/%3E%3C/svg%3E%0A")
+  background-repeat: no-repeat
+  background-position: 50% 50%
+  background-size: 8px 13px
+  transition: background-color 0.3s, ease 0.3s
+  position: static
+  margin-top: 0
+  display: inline-block
+  vertical-align: top
+
+  &:hover
+    background-color: #A49777
+
+  &:after
+    display: none
+
+.swiper-button-next
+  transform: rotate(180deg)
