--- a/marmelad/_blocks/main-menu/main-menu.styl
+++ b/marmelad/_blocks/main-menu/main-menu.styl
@@ -5,14 +5,30 @@
   border-bottom: 1px solid #EEEEEE
 
   @media (max-width: 959px)
-    padding-top: 40px
     border: none
+    padding-top: 0
+    padding-bottom: 0
+    position: absolute
+    top: -150px
+    width: 100%
+    background: #fff
     box-shadow: 0px 12px 9px rgba(0, 0, 0, 0.08)
     border-radius: 0px 0px 15px 15px
-    padding-bottom: 25px
-    display: none
+    opacity: 0
+    visibility: hidden
+    transition: opacity 0.3s, top 0.3s, ease 0.3s
+    z-index: 50
+
+  &._is-show
+    opacity: 1
+    visibility: visible
+    top: 0
 
   &__nav
+    @media (max-width: 959px)
+      padding-top: 45px
+      padding-bottom: 30px
+
     ul
       list-style: none
       display: flex
