added catalog preview block

--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -206,3 +206,12 @@ p
 
 .swiper-button-next
   transform: rotate(180deg)
+
+.swiper-pagination-bullet
+  width: 15px
+  height: 15px
+  background-color: #CDCDCD
+  opacity: 1
+
+  &.swiper-pagination-bullet-active
+    background-color: #A49777
