--- a/marmelad/_blocks/catalog-preview/catalog-preview.styl
+++ b/marmelad/_blocks/catalog-preview/catalog-preview.styl
@@ -1,8 +1,12 @@
 .catalog-preview
   padding-top: 75px
+  padding-bottom: 60px
 
   @media (min-width: 1280px)
     margin-left: -90px
+
+  @media (max-width: 1279px)
+    padding-bottom: 30px
 
   &__wrapper
     display: flex
@@ -28,7 +32,8 @@
     padding-bottom: 60px
 
     @media (max-width: 639px)
-      width 100%
+      width: 100%
+      padding-bottom: 0
 
     .swiper-pagination
       text-align: left
