--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -8,6 +8,7 @@ html
 
 body
   background-color: #E5E5E5
+  // background: linear-gradient(180deg, #e5e5e5 0%, #e5e5e5 15%, #fff 40%)
 
 h1, h2, h3, h4, h5, h6
   margin-top: 0
