--- a/marmelad/_blocks/steps-work/steps-work.styl
+++ b/marmelad/_blocks/steps-work/steps-work.styl
@@ -43,6 +43,9 @@
       background-image: url("data:image/svg+xml,%3Csvg width='11' height='20' viewBox='0 0 11 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M10 19L2 10L10 1' stroke='%23A49777' stroke-width='2'/%3E%3C/svg%3E%0A")
       background-size: 11px 20px
 
+      @media (min-width: 768px)
+        display: none
+
     .swiper-button-prev
       left: -15px
 
