--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1006,6 +1006,81 @@ p {
   line-height: 1.3;
   text-align: center;
 }
+.our-works {
+  max-width: 1920px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 195px;
+  padding-top: 60px;
+  padding-bottom: 100px;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(37.34%, #fff), color-stop(66.97%, rgba(255,255,255,0))), #f5f5f5;
+  background: linear-gradient(360deg, #fff 37.34%, rgba(255,255,255,0) 66.97%), #f5f5f5;
+  -webkit-box-shadow: 0px 4px 151px rgba(0,0,0,0.1);
+          box-shadow: 0px 4px 151px rgba(0,0,0,0.1);
+}
+.our-works__head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 60px;
+}
+.our-works__head:after {
+  content: '';
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  height: 1px;
+  background-color: #a49777;
+  margin-top: 10px;
+  margin-left: 35px;
+}
+.our-works__title {
+  font-size: 44px;
+  color: #cdcdcd;
+  font-weight: 700;
+  line-height: 1.1;
+}
+.our-works__container {
+  padding-bottom: 70px;
+}
+.our-works__container:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 1170px;
+  height: 1px;
+  background-color: #c4c4c4;
+}
+.our-works__item {
+  width: 380px;
+  margin-bottom: 20px;
+}
+.our-works__img img {
+  vertical-align: top;
+}
+.our-works__content {
+  margin-top: 25px;
+}
+.our-works__name {
+  font-size: 22px;
+  color: #000;
+  font-weight: 500;
+  line-height: 1.1;
+  margin-bottom: 10px;
+}
+.our-works__date {
+  font-size: 18px;
+  color: #c1c1c1;
+  font-weight: 500;
+  line-height: 1.1;
+}
 .steps-work {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1241,6 +1316,21 @@ p {
   .logo__link {
     margin-right: 25px;
   }
+  .our-works {
+    padding-top: 30px;
+    padding-bottom: 60px;
+    margin-bottom: 70px;
+  }
+  .our-works__head:after {
+    display: none;
+  }
+  .our-works__container {
+    padding-left: 13px;
+    padding-bottom: 0;
+  }
+  .our-works__container:after {
+    display: none;
+  }
   .steps-work {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -1303,9 +1393,17 @@ p {
     margin-right: 0;
     margin-bottom: 15px;
   }
+  .our-advantages__inner {
+    padding-left: 0;
+  }
+  .our-advantages__head {
+    padding-left: 15px;
+  }
   .our-advantages__items {
     overflow-y: auto;
+    padding-top: 25px;
     margin-left: 0;
+    padding-left: 15px;
     -webkit-overflow-scrolling: touch;
   }
   .our-advantages__item {
@@ -1371,10 +1469,25 @@ p {
     max-width: 70px;
   }
   .our-advantages__head {
-    margin-bottom: 30px;
+    margin-bottom: 15px;
   }
   .our-advantages__title {
     font-size: 30px;
+  }
+  .our-works__head {
+    margin-bottom: 30px;
+  }
+  .our-works__title {
+    font-size: 30px;
+  }
+  .our-works__item {
+    width: 215px;
+  }
+  .our-works__content {
+    margin-top: 15px;
+  }
+  .our-works__name {
+    font-size: 17px;
   }
   .steps-work__title {
     font-size: 30px;
