added contacts form

--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -132,9 +132,18 @@ p
     background-color: #A49777
     border-radius: 8px
 
+    @media (max-width: 639px)
+      font-size: 18px
+      padding-top: 10px
+      padding-bottom: 13px
+
     &._is-loading
       padding-top: 22px
       padding-bottom: 22px
+
+      @media (max-width: 639px)
+        padding-top: 16px
+        padding-bottom: 15px
 
     &:hover
       background-color: #DE8C10
