--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -10,6 +10,8 @@ body
   background-color: #E5E5E5
   // background: linear-gradient(180deg, #e5e5e5 0%, #e5e5e5 15%, #fff 40%)
   // background: linear-gradient(360deg, #FFFFFF 37.34%, rgba(255, 255, 255, 0) 66.97%), #F5F5F5
+  background-repeat: no-repeat
+
 
 h1, h2, h3, h4, h5, h6
   margin-top: 0
