--- a/marmelad/_blocks/hero/hero.styl
+++ b/marmelad/_blocks/hero/hero.styl
@@ -2,11 +2,16 @@
   position: relative
   overflow: hidden
   height: 715px
+  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
 
   @media (max-width: 1360px)
     height: 500px
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%)
 
-  &:before
+  @media (max-width: 767px)  
+    clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%)
+
+  /* &:before
     content: ''
     position: absolute
     bottom: -356px
@@ -15,9 +20,11 @@
     height: 100%
     transform: skew(-85deg)
     background-color: #E5E5E5
+    background: linear-gradient(360deg, #FFFFFF 37.34%, rgba(255, 255, 255, 0) 66.97%), #F5F5F5
+    background-repeat: no-repeat
 
     @media (max-width: 1360px)
-      bottom: -250px
+      bottom: -250px */
 
   &:after
     content: ''
