--- a/static/css/app.css
+++ b/static/css/app.css
@@ -608,6 +608,7 @@ html {
 }
 body {
   background-color: #e5e5e5;
+  background-repeat: no-repeat;
 }
 h1,
 h2,
@@ -1204,18 +1205,23 @@ p {
   position: relative;
   overflow: hidden;
   height: 715px;
-  -webkit-overflow-scrolling: touch;
-}
-.hero:before {
-  content: '';
-  position: absolute;
-  bottom: -356px;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -webkit-transform: skew(-85deg);
-          transform: skew(-85deg);
-  background-color: #e5e5e5;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+          clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+/* &:before
+    content: ''
+    position: absolute
+    bottom: -356px
+    left: 0
+    width: 100%
+    height: 100%
+    transform: skew(-85deg)
+    background-color: #E5E5E5
+    background: linear-gradient(360deg, #FFFFFF 37.34%, rgba(255, 255, 255, 0) 66.97%), #F5F5F5
+    background-repeat: no-repeat
+
+    @media (max-width: 1360px)
+      bottom: -250px */
+-webkit-overflow-scrolling: touch;
 }
 .hero:after {
   content: '';
@@ -1842,9 +1848,8 @@ p {
 @media (max-width: 1360px) {
   .hero {
     height: 500px;
-  }
-  .hero:before {
-    bottom: -250px;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
   }
   .hero__section {
     background-position: 50% 125px;
@@ -2153,6 +2158,10 @@ p {
         -ms-flex-align: center;
             align-items: center;
     margin-top: 35px;
+  }
+  .hero {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%);
   }
   .hero__section {
     background-position: 50% 290px;
