--- a/marmelad/_blocks/catalog-projects/catalog-projects.styl
+++ b/marmelad/_blocks/catalog-projects/catalog-projects.styl
@@ -1,24 +1,27 @@
-.catalog-block
+.catalog-projects
   padding-top: 35px
   padding-bottom: 60px
 
   @media (max-width: 1279px)
     padding-bottom: 30px
 
-  &__head
-    margin-bottom: 40px
-
   &__items
     display: flex
     flex-wrap: wrap
-    margin-left: -20px
+    margin-left: -35px
+
+    @media (max-width: 1279px)
+      margin-left: -20px
 
   &__item
     width: 33.333%
-    padding-left: 20px
+    padding-left: 35px
     margin-bottom: 20px
 
-    @media (max-width: 959px)
+    @media (max-width: 1279px)
+      padding-left: 20px
+
+    @media (max-width: 1024px)
       width: 50%
 
     @media (max-width: 639px)
