added filter, sorting

--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -12,7 +12,6 @@ body
   // background: linear-gradient(360deg, #FFFFFF 37.34%, rgba(255, 255, 255, 0) 66.97%), #F5F5F5
   background-repeat: no-repeat
 
-
 h1, h2, h3, h4, h5, h6
   margin-top: 0
   margin-bottom: 20px
@@ -255,3 +254,10 @@ p
     @media (max-width: 767 px)
       font-size: 15px
       line-height: 1.5
+
+.inner-page-head
+  h1
+    margin-bottom: 45px
+
+    @media (max-width: 767px)
+      margin-bottom: 20px
