--- a/marmelad/_blocks/product-thumb/product-thumb.styl
+++ b/marmelad/_blocks/product-thumb/product-thumb.styl
@@ -37,22 +37,19 @@
 
   &__top
     position: relative
-    padding-top: 50px
+    padding-top: 40px
+    margin-bottom: 30px
+
+    @media (max-width: 639px)
+      margin-bottom: 20px
 
   &__img
     width: 220px
-    height: 220px
+    height: 135px
     margin-left: auto
     margin-right: auto
     display: block
 
-    /* img
-    vertical-align: top
-    position: absolute
-    top: 50%
-    left: 50%
-    transform: translate(-50%, -50%)
-    z-index: 1 */
     @media (max-width: 639px)
       width: 195px
       height: 120px
@@ -145,3 +142,61 @@
 
     @media (max-width: 767px)
       transform: translateY(1px)
+
+.banner-thumb
+  width: 100%
+  min-height: 100%
+  display: flex
+
+  @media (max-width: 639px)
+    min-height: 365px
+
+  &__body
+    width: 100%
+    min-height: 100%
+    display: flex
+    flex-direction: column
+    border: 1px solid #D8D8D8
+    border-radius: 19px
+    background-color: #F1F1F1
+
+  &__content
+    text-align: center
+    padding-top: 80px
+
+    @media (max-width: 639px)
+      padding-top: 40px
+
+  &__name
+    font-size: 21px
+    color: #3D3D3D
+    font-weight: 700
+    line-height: 1.1
+    text-align: center
+    margin-bottom: 5px
+
+  &__price
+    display: flex
+    flex-direction: column
+
+    strong
+      font-size: 41px
+      color: #A49777
+      font-weight: 700
+      line-height: 1
+      text-transform: uppercase
+
+      @media (max-width: 639px)
+        font-size: 35px
+
+  &__img
+    width: 250px
+    height: 135px
+    margin-left: auto
+    margin-right: auto
+    display: block
+
+    @media (max-width: 639px)
+      width: 195px
+      height: 120px
+      margin-bottom: 15px
